config file setup

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="font-publicSans">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <h1 class="text-red-500">Hello</h1>
+    <h1
+      class="text-xl text-darkBlue md:bg-pink-300 xl:bg-yellow-200 2xl:bg-green-400"
+    >
+      Hello
+    </h1>
     <img src="./images/bg-intro-desktop.svg" alt="" />
     <!-- Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
